# ESP32-home-sensor-hub

./: .editorconfig  .gitignore  README.md
docs/: DEVELOPMENT.md  GIT_WORKFLOW.md  REPOSITORY_LAYOUT.md  SHT41_BATTERY_MEASUREMENT.md
esp/ESP32C3_SEN66_air_quality/: .gitignore  CMakeLists.txt  README 2.md  README.md  sdkconfig.defaults
esp/ESP32C3_SEN66_air_quality/main/: CMakeLists.txt  app_config.example 2.h  app_config.example.h  espnow_transport.c  espnow_transport.h  main 2.c  main.c  mqtt_transport.c  mqtt_transport.h  sen66.c  sen66.h  sen66_packet.h
esp/ESP32C3_SHT41_node/: CMakeLists.txt
esp/ESP32_master/: .gitignore  CMakeLists.txt  README.md
home-assistant/: .env.example  README.md  compose.yaml
home-assistant/configuration/: automations.yaml  configuration.yaml  scripts.yaml  secrets.yaml.example
home-assistant/discovery/: Dockerfile  requirements.txt
home-assistant/examples/: dashboard.yaml
home-assistant/scripts/: common.sh  deploy.sh  install.sh  logs.sh  status.sh  uninstall.sh
server/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  install.sh  requirements.txt
server/backend/: .env.example
server/docs/: API.md  ARCHITECTURE.md  BRIDGE.md  CLEAN_INSTALL.md  DASHBOARD.md  DEPLOYMENT.md  DOCKER.md  FINAL_REVIEW.md  GRAFANA.md  INFLUXDB.md  MQTT.md  OPERATIONS.md  REPOSITORY_TREE.md  SECURITY.md  SEN66_AIR_QUALITY.md  TAILSCALE.md
server/examples/: sen66-full.json
server/scripts/: bootstrap_python.sh  common.sh  create_mqtt_users.sh  create_service_user.sh  install_base_packages.sh  install_grafana.sh  (+15 more)
(+53 files in other folders)
